стилизация input на странице формы

--- a/source/less/blocks/testimonials-filters-position.less
+++ b/source/less/blocks/testimonials-filters-position.less
@@ -76,6 +76,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .testimonials-filters {
+    grid-template-columns: 493px 467px;
+  }
+
   .radio-button {
     display: grid;
     grid-template-columns: repeat(3, 262px);
