--- a/source/less/blocks/testimonials-section.less
+++ b/source/less/blocks/testimonials-section.less
@@ -115,11 +115,16 @@
   font-weight: 700;
   color: @black;
   background-color: #f2f2f2;
-  background-image: url("../img/phone.png");
+  background-image: url("../img/bg-icon-phone.png");
   background-position: right;
   background-repeat: no-repeat;
   border: none;
   outline: none;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-icon-phone@2x.png");
+    background-size: 116px auto;
+  }
 
   &::placeholder {
     padding-left: 5px;
@@ -140,7 +145,12 @@
 }
 
 .field-contact:nth-of-type(2) .field-contact__input {
-  background-image: url("../img/email.png");
+  background-image: url("../img/bg-icon-mail.png");
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-icon-mail@2x.png");
+    background-size: 116px auto;
+  }
 }
 
 .radio-button {
