создал модальные окна

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,3 +25,5 @@
 @import "./blocks/review.less";
 @import "./blocks/testimonials-section.less";
 @import "./blocks/testimonials-filters-position.less";
+@import "./blocks/modal-failure.less";
+@import "./blocks/modal-success.less";
