сделал, что мог. Надеюсь дойти до завершения проекта

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -231,7 +231,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/bg-item-picture-city-tablet@2x.jpg");
-      background-size: 10240px auto;
+      // background-size: 10240px auto;
     }
   }
 
@@ -300,7 +300,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/bg-item-picture-bridge-tablet@2x.jpg");
-      background-size: 1024px auto;
+      // background-size: 1024px auto;
     }
   }
 
@@ -340,7 +340,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/bg-item-picture-city-desktop@2x.jpg");
-      background-size: 1600px auto;
+      // background-size: 1600px auto;
     }
   }
 
@@ -357,7 +357,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/bg-item-picture-bridge-desktop@2x.jpg");
-      background-size: 1600px auto;
+      // background-size: 1600px auto;
     }
   }
 }
