--- a/source/less/blocks/modal-success.less
+++ b/source/less/blocks/modal-success.less
@@ -1,7 +1,7 @@
 // @import "./blocks/modal-success.less";
 
 .modal-success {
-  // display: none;
+  display: none;
   position: relative;
   bottom: 696px;
   width: 320px;
