--- a/source/less/blocks/inner-intro.less
+++ b/source/less/blocks/inner-intro.less
@@ -15,7 +15,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-mobile@2x.jpg");
-    background-size: 100% 57px, 640px cover;
+    // background-size: 100% 57px, 640px cover;
   }
 }
 
@@ -32,7 +32,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-mobile@2x.jpg");
-      background-size: 100% 57px, 1536px auto;
+      // background-size: 100% 57px, 1536px auto;
     }
   }
 
@@ -49,7 +49,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-mobile@2x.jpg");
-      background-size: 100% 57px, 2400px auto;
+      // background-size: 100% 57px, 2400px auto;
     }
   }
 
