--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -10,7 +10,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-mobile@2x.jpg");
-    background-size: 100% 57px, 640px cover;
+    // background-size: 100% 57px, 640px cover;
   }
 }
 
@@ -35,7 +35,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-tablet@2x.jpg");
-      background-size: 100% 57px, 1536px auto;
+      // background-size: 100% 57px, 1536px auto;
     }
   }
 
@@ -52,7 +52,7 @@
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-desktop@2x.jpg");
-      background-size: 100% 57px, 2400px auto;
+      // background-size: 100% 57px, 2400px auto;
     }
   }
 }
