--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -2,14 +2,14 @@
   // видны в блоки рамки
   height: 389px;
   color: #ffffff;
-  background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-mobile.jpg");
+  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-intro-mobile.jpg");
   background-color: #a7afc6;
   background-position: bottom, center;
   background-repeat: no-repeat;
   background-size: 100% 57px, cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-mobile@2x.jpg");
+    background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-intro-mobile@2x.jpg");
     // background-size: 100% 57px, 640px cover;
   }
 }
@@ -31,10 +31,10 @@
 @media (min-width: @tablet-width) {
   .main-intro {
     height: 518px;
-    background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-tablet.jpg");
+    background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-intro-tablet.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-tablet@2x.jpg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-intro-tablet@2x.jpg");
       // background-size: 100% 57px, 1536px auto;
     }
   }
@@ -48,10 +48,10 @@
 
 @media (min-width: @desktop-width) {
   .main-intro {
-    background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-desktop.jpg");
+    background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-intro-desktop.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-desktop@2x.jpg");
+      background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-intro-desktop@2x.jpg");
       // background-size: 100% 57px, 2400px auto;
     }
   }
