--- a/source/less/blocks/modal-success.less
+++ b/source/less/blocks/modal-success.less
@@ -16,7 +16,7 @@
 
 .modal-success__section {
   position: relative;
-  top: 42px;
+  top: 730px;
   display: flex;
   flex-direction: column;
   flex: wrap;
@@ -86,6 +86,7 @@
 
 @media (min-width: @tablet-width) {
   .modal-success__section {
+    top: 605px;
     width: 640px;
   }
 
@@ -105,5 +106,11 @@
     padding-bottom: 14px;
     font-size: 21px;
     line-height: 26px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal-success__section {
+    top: 566px;
   }
 }
