переназначал цвета в rgba, починил фокус  в форме

--- a/source/less/blocks/gallery-list.less
+++ b/source/less/blocks/gallery-list.less
@@ -33,7 +33,7 @@
 }
 
 .gallery-list__photo {
-  background-color: #edbbaa;
+  background-color: rgb(237, 187, 170);
   background-size: 100%;
 }
 
@@ -68,10 +68,6 @@
   text-transform: none;
   color: @dark;
 }
-
-// .gallery-list__wrapper-button {
-//   align-self: center;
-// }
 
 .gallery-list__item-button {
   display: flex;
@@ -148,7 +144,7 @@
     padding: 0;
 
     .gallery-list__wrapper--gray {
-      background-color: #eaeaea;
+      background-color: rgb(234, 234, 234);
     }
   }
 
@@ -233,7 +229,7 @@
       width: fill-available;
       z-index: 2;
       color: @white;
-      background-color: #0000004d;
+      background-color: rgba(0, 0, 0, 0.3);
     }
   }
 
