--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -33,17 +33,17 @@
 }
 
 .main-nav--closed .main-nav__toggle:hover::before {
-  background-color: fade(@blue, 60%);
+  background-color: rgba(129, 179, 210, 0.6);
   box-shadow:
-    0 9px 0 0 fade(@blue, 60%),
-    0 18px 0 0 fade(@blue, 60%);
+    0 9px 0 0 rgba(129, 179, 210, 0.6),
+    0 18px 0 0 rgba(129, 179, 210, 0.6);
 }
 
 .main-nav--closed .main-nav__toggle:active::before {
-  background-color: fade(@blue, 30%);
+  background-color: rgba(129, 179, 210, 0.3);
   box-shadow:
-    0 9px 0 0 fade(@blue, 30%),
-    0 18px 0 0 fade(@blue, 30%);
+    0 9px 0 0 rgba(129, 179, 210, 0.3),
+    0 18px 0 0 rgba(129, 179, 210, 0.3);
 }
 
 @media (max-width: @mobile-width-only) {
@@ -99,12 +99,12 @@
 
   &:hover::before,
   &:hover::after {
-    background-color: fade(@white, 60%);
+    background-color: rgba(255, 255, 255, 0.6);
   }
 
   &:active::before,
   &:active::after {
-    background-color: fade(@white, 30%);
+    background-color: rgba(255, 255, 255, 0.3);
   }
 }
 
