--- a/source/less/blocks/modal-failure.less
+++ b/source/less/blocks/modal-failure.less
@@ -7,7 +7,7 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  background-color: fade(@black, 30%);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .modal-failure--close {
@@ -65,12 +65,11 @@
   }
 
   &:active {
-    color: fade(@white, 30%);
+    color: rgba(255, 255, 255, 0.3);
     background-color: #5496bd;
   }
 }
 
-// стили для кнопки :disabled
 .testimonials-filters__button--disabled:disabled {
   background-color: #e5e5e5;
   cursor: not-allowed;
