--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -34,12 +34,11 @@
   }
 
   &:active {
-    color: fade(@white, 30%);
+    color: rgba(255, 255, 255, 0.3);
     background-color: #5496bd;
   }
 }
 
-// стили для кнопки :disabled
 .offer__button--disabled:disabled {
   background-color: #e5e5e5;
   cursor: not-allowed;
