--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -6,7 +6,6 @@
 }
 
 .presentation__wrapper {
-  // position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -55,7 +54,8 @@
   height: 0;
   border-style: solid;
   border-width: 27px 0 27px 49px;
-  border-color: transparent transparent transparent fade(@white, 70%);
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.7);
+  cursor: pointer;
 }
 
 @media (min-width: @tablet-width) {
