--- a/source/less/blocks/testimonials-section.less
+++ b/source/less/blocks/testimonials-section.less
@@ -80,7 +80,7 @@
 
   &::placeholder {
     padding-left: 5px;
-    color: fade(@black, 30%);
+    color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -128,7 +128,7 @@
 
   &::placeholder {
     padding-left: 5px;
-    color: fade(@black, 30%);
+    color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -187,14 +187,23 @@
   background-color: #e5e5e5;
 }
 
-.radio-button__label:focus .radio-button__mark,
-.checkbox__label .checkbox__text::before:focus {
-  background-color: #ff0000;
-}
-
 .radio-button__label:active .radio-button__mark,
 .checkbox__label:active .checkbox__text::before {
   background-color: #d5d5d5;
+}
+
+.radio-button__input[type="radio"]:checked:focus + .radio-button__mark {
+  background-color: #d5d5d5;
+}
+
+.radio-button__input[type="radio"]:checked:focus + .radio-button__mark::before {
+  background-color: rgba(51, 51, 51, 0.3);
+}
+
+.checkbox__input:focus + .checkbox__text::before,
+.checkbox__input:checked:focus + .checkbox__text::after {
+  background-color: #d5d5d5;
+  border-color: rgba(51, 51, 51, 0.3);
 }
 
 .radio-button__input + .radio-button__mark {
@@ -213,7 +222,7 @@
 }
 
 .radio-button__label:active .radio-button__mark::before {
-  background-color: fade(#333333, 30%);
+  background-color: rgba(51, 51, 51, 0.3);
 }
 
 
@@ -268,8 +277,9 @@
 }
 
 .checkbox__label:active .checkbox__text::after {
-  border-color: fade(#333333, 30%);
+  border-color: rgba(51, 51, 51, 0.3);
 }
+
 
 .checkbox__text {
   font-size: 18px;
@@ -319,7 +329,7 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
-  color: fade(@black, 30%);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .form-button {
@@ -342,12 +352,11 @@
   }
 
   &:active {
-    color: fade(@white, 30%);
+    color: rgba(255, 255, 255, 0.3);
     background-color: #5496bd;
   }
 }
 
-// стили для кнопки :disabled
 .testimonials-filters__button--disabled:disabled {
   background-color: #e5e5e5;
   cursor: not-allowed;
@@ -362,7 +371,7 @@
 .testimonials-filters__marked {
   font-size: 12px;
   line-height: 21px;
-  color: fade(#333333, 60%);
+  color: rgba(51, 51, 51, 0.6);
 
   sup {
     position: relative;
