--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -3,15 +3,15 @@
 @font-face {
   font-family: "PT Sans";
   font-weight: 400;
-  src: url("../fonts/ptsans.woff") format(woff);
-  src: url("../fonts/ptsans.woff2") format(woff2);
+  src: url("../fonts/ptsans.woff2") format(woff2),
+    url("../fonts/ptsans.woff") format(woff);
   font-display: swap;
 }
 
 @font-face {
   font-family: "PT Sans";
   font-weight: 700;
-  src: url("../fonts/ptsansbold.woff") format(woff);
-  src: url("../fonts/ptsansbold.woff2") format(woff2);
+  src: url("../fonts/ptsansbold.woff2") format(woff2),
+    url("../fonts/ptsansbold.woff") format(woff);
   font-display: swap;
 }
