подгонка к макету страницы каталога

--- a/source/less/blocks/gallery-list.less
+++ b/source/less/blocks/gallery-list.less
@@ -22,10 +22,6 @@
   color: @dark;
 }
 
-.gallery-list__description br:nth-child(2) {
-  display: none;
-}
-
 .gallery-list__item {
   padding-top: 23px;
   padding-bottom: 25px;
@@ -94,7 +90,7 @@
   .gallery-list {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    margin-bottom: 39px;
+    margin-bottom: 41px;
     padding-left: 60px;
     padding-right: 60px;
     text-align: center;
@@ -102,7 +98,7 @@
 
   .gallery-list__header {
     grid-column: 1/7;
-    margin-bottom: 42px;
+    margin-bottom: 44px;
     padding-top: 28px;
     padding-right: 30px;
     padding-bottom: 42px;
@@ -114,13 +110,9 @@
     font-size: 30px;
   }
 
-  .gallery-list__description br:nth-child(1),
-  .gallery-list__description br:nth-child(3) {
-    display: none;
-  }
-
-  .gallery-list__description br:nth-child(2) {
-    display: inline;
+  .gallery-list__description {
+    padding-left: 13%;
+    padding-right: 13%;
   }
 
   .gallery-list__item {
@@ -195,13 +187,15 @@
 
 @media (min-width: @desktop-width) {
   .gallery-list {
-    margin-bottom: 44px;
+    margin-bottom: 49px;
     padding: 0;
     text-align: center;
   }
 
   .gallery-list__header {
     margin-bottom: 46px;
+    padding-right: 26%;
+    padding-left: 26%;
   }
 
   .gallery-list__item--2 {
