--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -15,7 +15,7 @@
   text-transform: uppercase;
   text-decoration: none;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgb(1, 1, 1, 0.2);
+  border-bottom: 1px solid rgba(1, 1, 1, 0.2);
 
   &:hover {
     background-color: #669ec0;
@@ -25,6 +25,10 @@
     color: rgba(255, 255, 255, 0.3);
     background-color: #5496bd;
   }
+}
+
+.site-list__item:last-child a {
+  border-bottom: none;
 }
 
 .site-list__logo {
