--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -10,6 +10,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-intro-mobile@2x.jpg");
+    background-size: 100% 57px, cover;
   }
 }
 
