--- a/source/less/blocks/testimonials-section.less
+++ b/source/less/blocks/testimonials-section.less
@@ -2,21 +2,23 @@
 
 .testimonials-filters__group {
   position: relative;
-  width: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
   margin-bottom: 28px;
   padding-top: 24px;
+  box-sizing: border-box;
 
   &::before {
     content: "";
     position: absolute;
     top: -1px;
-    left: -120px;
+    right: -20px;
+    left: -20px;
     height: 1px;
-    width: 867px;
+    min-width: 100%;
     background-color: #e5e5e5;
   }
 }
@@ -25,9 +27,10 @@
   content: "";
   position: absolute;
   top: -16px;
-  left: -120px;
+  right: -20px;
+  left: -20px;
   height: 1px;
-  width: 867px;
+  min-width: 100%;
   background-color: #e5e5e5;
 }
 
