--- a/source/less/blocks/inner-intro.less
+++ b/source/less/blocks/inner-intro.less
@@ -5,7 +5,8 @@
   flex-wrap: wrap;
   justify-content: center;
   height: 157px;
-  margin-bottom: 34px;
+  min-width: 320px;
+  margin-bottom: 33px;
   color: #ffffff;
   background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-inner-intro-mobile.jpg");
   background-color: #a7afc6;
@@ -33,7 +34,7 @@
     background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-inner-intro-tablet.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-inner-intro-mobile@2x.jpg");
+      background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-inner-intro-tablet@2x.jpg");
     }
   }
 
@@ -50,7 +51,7 @@
     background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-inner-intro-desktop.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-inner-intro-mobile@2x.jpg");
+      background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-inner-intro-desktop@2x.jpg");
     }
   }
 
