--- a/source/less/blocks/testimonials-filters-position.less
+++ b/source/less/blocks/testimonials-filters-position.less
@@ -5,6 +5,20 @@
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
+  margin-bottom: 2px;
+}
+
+.opinion {
+  margin-bottom: 30px;
+}
+
+.landmark {
+  margin-bottom: 28px;
+}
+
+.description .testimonials-filters__title {
+  margin-top: -4px;
+  padding-bottom: 19px;
 }
 
 @media (min-width: @tablet-width) {
@@ -32,16 +46,17 @@
 
   .landmark {
     margin-top: 5px;
+    margin-bottom: -6px;
   }
 
-  .description {
-    margin-top: -13px;
-    margin-bottom: 0;
+  .description .testimonials-filters__title {
+    padding-bottom: 25px;
   }
 
   .radio-button {
     display: grid;
     grid-template-columns: 285px 285px;
+    column-gap: 10px;
     justify-content: center;
   }
 
@@ -66,6 +81,7 @@
     grid-column: 1/2;
     padding-top: 18px;
     padding-bottom: 12px;
+    padding-left: 11px;
   }
 
   .testimonials-filters__marked {
@@ -82,13 +98,13 @@
 
   .radio-button {
     display: grid;
-    grid-template-columns: repeat(3, 308px);
-    padding: 0 36px;
+    grid-template-columns: repeat(3, 297px);
+    padding-left: 30px;
   }
 
   .landmark {
     margin-top: 14px;
-    margin-bottom: 43px;
+    margin-bottom: 33px;
   }
 
   .checkbox {
@@ -115,6 +131,7 @@
 
   .form-button {
     width: 80%;
-    margin: 0 auto;
+    margin: -6px auto;
+    padding: 0 96px;
   }
 }
